--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 "author": "yoshiko",
 "license": "MIT",
  "scripts":{
-    "test": "jest"
+    "test": "TZ = 'Asia/Tokyo' jest"
  },
  "devDependencies":{
     "jest" : "26.1.0"
