--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,5 +1,9 @@
 # Use the latest 2.1 version of CircleCI pipeline process engine. See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
+executors:
+  ruby-img:
+    docker:
+      - image: cimg/ruby:2.7.1-node
 # Use a package of configuration called an orb.
 # orbs:
 #   # Declare a dependency on the welcome-orb
@@ -13,9 +17,6 @@ version: 2.1
 #       - welcome/run
 jobs:
   build:
-    docker:
-      - image: cimg/node:lts
+    executor: ruby-img
     steps:
-      - checkout
-      - run: yarn install
-      - run: yarn test
+      - run: echo Hello!!
