--- a/.gitignore
+++ b/.gitignore
@@ -65,3 +65,9 @@ yarn-debug.log*
 # Ignore uploaded files in development
 /storage/*
 !/storage/.keep
+
+# Ignore terraform files
+.terraform.lock.hcl
+.terraform/*
+terraform.tfstate
+terraform.tfstate.backup
