use terraform variables and output

--- a/.gitignore
+++ b/.gitignore
@@ -67,7 +67,7 @@ yarn-debug.log*
 !/storage/.keep
 
 # Ignore terraform files
-.terraform.lock.hcl
+.terraform.*
 .terraform/*
 terraform.tfstate
 terraform.tfstate.backup
