--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,7 +43,7 @@ workflows:
       - test2:
           requires:
             - checkout
-      - deploy-to-staging:
+      - deploy:
           requires:
             - test1
             - test2
