--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,5 +1,7 @@
 # Use the latest 2.1 version of CircleCI pipeline process engine. See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
+orbs:
+  aws-code-deploy: circleci/aws-code-deploy@x.y
 executors:
   ruby-img:
     docker:
@@ -43,7 +45,7 @@ workflows:
       - test2:
           requires:
             - checkout
-      - deploy:
+      - aws-code-deploy/deploy:
           requires:
             - test1
             - test2
@@ -51,3 +53,8 @@ workflows:
             branches:
               only:
                 - main
+          application-name: yoshiko-test-main
+          bundle-bucket: yoshiko-codedeploy/main/
+          bundle-key: ${CODE_DEPLOY_S3_KEY}
+          deployment-group: yoshiko-test-grp-main
+          service-role-arn: ${CODE_DEPLOY_ARN}
