--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -53,6 +53,7 @@ workflows:
             branches:
               only:
                 - main
+          context: AWS_CREDENTIALS
           application-name: yoshiko-test-main
           bundle-bucket: yoshiko-codedeploy/main/
           bundle-key: ${CODE_DEPLOY_S3_KEY}
